# rocket_control

./: .gitattributes  .pylintrc  Cargo.toml  MANIFEST.in  README.md  conda_devtools.sh  constants.py  controls.py  main.py  mypy.ini  plots.py  pyproject.toml  rkt_types.py  rockets.py  setup.cfg  setup.py  simulation.py  utils.py
src/: constants.rs  controls.rs  lib.rs  main.rs  params.rs  rkt_types.rs  rockets.rs  simulation.rs  utils.rs
src/rc/: _version.py  constants.py  controls.py  main.py  params.py  plots.py  rkt_types.py  rockets.py  simulation.py  utils.py
