[package]
name = "rocket_control"
version = "0.0.1"
authors = ["Jake Fennick <jake.fennick@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rocket_control"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
rand = "*"
# cute
# soak

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3