# Based on https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = rocket_control
version = 0.0.1
author = Jake Fennick
author_email = jake.fennick@gmail.com
description = A simple orbital rocket launch simulator with control optimization.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jfennick/rocket_control
project_urls =
    Bug Tracker = https://github.com/jfennick/rocket_control/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy

[options.extras_require]
tests =
    pytest
    pytest-cov
    coverage
    mypy
    pylint

[options.entry_points]
console_scripts =
    rocket_control = rc.main:main

[options.packages.find]
where = src

[aliases]
test = pytest

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/rc/_version.py
versionfile_build = rc/_version.py
tag_prefix = ''

[build_sphinx]
source_dir = docs